About section now displays correctly on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -605,6 +605,7 @@ h2 {
   margin-left: 20px;
   margin-right: 20px;
   padding-top: 60px;
+  padding-bottom: 5vh;
   margin: 0 auto;
   font-family: 'Raleway', sans-serif;
   font-size: 50px;
